# enigma2-plugin-networkbrowser

./: Makefile.am  configure.ac
src/: AutoMount.py  MountEdit.py  MountManager.py  MountView.py
src/lib/: Makefile.am  showmount.c
